update project section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
                     Dundas Street, London, ON, Canada · (905) 324-8724 ·
                     <a class="text-color" href="mailto:vimukthisadaruwan65@gmail.com">vimukthisadaruwan65@gmail.com</a>
                 </div>
-                <p class="lead mb-5">Passionate and solutions-driven web developer with a<b> certificate in full-stack development </b>from <b> the University of Toronto </b> and a<b>  BSc in information and technology </b> from <b> the Rajarata University of Sri Lanka.</b>  Develop skills in JavaScript, jQuery, Bootstrap, Foundation, Node.js, Express, TDD, MySQL, MongoDB, Oracle (PL/SQL), WordPress, Shopify and responsive web design. Innovative problem-solver passionate with analytical skills about developing web apps; focused on mobile-first design and development. Strengths in creativity, teamwork, and building projects from ideation to execution.</p>
+                <p class="lead mb-5">Passionate and solutions-driven web developer with a<b> certificate in full-stack
+                        development </b>from <b> the University of Toronto </b> and a<b> BSc in information and
+                        technology </b> from <b> the Rajarata University of Sri Lanka.</b> Develop skills in JavaScript,
+                    jQuery, Bootstrap, Foundation, Node.js, Express, TDD, MySQL, MongoDB, Oracle (PL/SQL), WordPress,
+                    Shopify and responsive web design. Innovative problem-solver passionate with analytical skills about
+                    developing web apps; focused on mobile-first design and development. Strengths in creativity,
+                    teamwork, and building projects from ideation to execution.</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/vimukthi-gunasekara/"><i
                             class="fab fa-linkedin-in"></i></a>
@@ -122,7 +128,7 @@
                     <div class="row mt-5 mb-2" id="filter-buttons">
                         <div class="col-12">
                             <button class="btn mb-2 me-1 active" data-filter="all">Show All</button>
-                            <button class="btn mb-2 mx-1" data-filter="Front-End">Front-End</button>                            
+                            <button class="btn mb-2 mx-1" data-filter="Front-End">Front-End</button>
                             <button class="btn mb-2 mx-1" data-filter="Back-End">Back-End</button>
                             <button class="btn mb-2 mx-1" data-filter="Inquirer-Module">Inquirer Module</button>
                             <button class="btn mb-2 mx-1" data-filter="WordPress">WordPress</button>
@@ -163,10 +169,12 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: JavaScript, React.js, Node.js, React-Beautifull-dnd
-                                            </li>
+                                            <div>
+                                                <p class="tools">JavaScript</p>
+                                                <p class="tools">React.js</p>
+                                                <p class="tools">Node.js</p>
+                                                <p class="tools">React-Beautifull-dnd</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -213,12 +221,14 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Front-end development.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, Foundation Framework, GoogleFonts, Font
-                                                Awesome, AdviceSlip
-                                                API, NBP Web API
-                                            </li>
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">Foundation Framework</p>
+                                                <p class="tools">GoogleFonts</p>
+                                                <p class="tools">Font Awesome</p>
+                                                <p class="tools">AdviceSlip API</p>
+                                                <p class="tools">NBP Web API</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -262,10 +272,12 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: Node.js, MySQL, ORM, Sequelize
-                                            </li>
+                                            <div>
+                                                <p class="tools">Node.js</p>
+                                                <p class="tools">MySQL</p>
+                                                <p class="tools">ORM</p>
+                                                <p class="tools">Sequelize</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -308,10 +320,12 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, Moment-js, Bootstrap, JQuery
-                                            </li>
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">Moment-js</p>
+                                                <p class="tools">Bootstrap</p>
+                                                <p class="tools">JQuery</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -327,7 +341,8 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#prgModal" data-name="Inquirer-Module">
+                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#prgModal"
+                            data-name="Inquirer-Module">
                             <img src="./assets/images/professional-readme-generator.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Professional Readme File
@@ -361,10 +376,10 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, Inquirer module from Node.js
-                                            </li>
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">Inquirer module from Node.js</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -377,7 +392,8 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#tpgModal" data-name="Inquirer-Module">
+                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#tpgModal"
+                            data-name="Inquirer-Module">
                             <img src="./assets/images/team-profile-generator.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Team Profile Generator</h4>
@@ -411,11 +427,13 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, Inquirer module from Node.js, jest-tests,
-                                                TDD
-                                            </li>
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">Inquirer module from Node.js</p>
+                                                <p class="tools">jest-tests</p>
+                                                <p class="tools">TDD</p>
+                                            </div>
+                                            
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -431,7 +449,8 @@
                             <img src="./assets/images/weather-dashboard.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Weather Dashboard 🌦️</h4>
-                                <p class="card-text">A weather dashboard application that displays current weather and a 5-day forecast for a city.</p>
+                                <p class="card-text">A weather dashboard application that displays current weather and a
+                                    5-day forecast for a city.</p>
                             </div>
                         </div>
                         <div class="modal fade" id="wdModal" tabindex="-1" role="dialog"
@@ -448,17 +467,19 @@
                                         <ul class="fa-ul mb-0">
                                             <li>
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Summary: A weather dashboard application that displays current weather and a 5-day forecast for a city.
+                                                Summary: A weather dashboard application that displays current weather
+                                                and a 5-day forecast for a city.
                                             </li>
                                             <li>
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, Open Weather Map API, GeoLocation API,
-                                                Foundation Framework
-                                            </li>
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">Open Weather Map API</p>
+                                                <p class="tools">GeoLocation API</p>
+                                                <p class="tools">Foundation Framework</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -506,10 +527,12 @@
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
                                             </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, WordPress
-                                            </li>
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">PHP</p>
+                                                <p class="tools">MySQL</p>
+                                                <p class="tools">WordPress</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags" href="https://SK-Realtors.ca/">Live
@@ -548,11 +571,13 @@
                                             <li>
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
-                                            </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, WordPress
-                                            </li>
+                                            </li>                                            
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">PHP</p>
+                                                <p class="tools">MySQL</p>
+                                                <p class="tools">WordPress</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags" href="https://vpac.lk/">Live
@@ -595,11 +620,13 @@
                                             <li>
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
-                                            </li>
-                                            <li>
-                                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                                Tools: HTML-CSS-JavaScript, WordPress
-                                            </li>
+                                            </li>                                            
+                                            <div>
+                                                <p class="tools">HTML-CSS-JavaScript</p>
+                                                <p class="tools">PHP</p>
+                                                <p class="tools">MySQL</p>
+                                                <p class="tools">WordPress</p>
+                                            </div>
                                         </ul>
                                         <br>
                                         <a class="tags" href="https://flymeinternational.com/">Live
