--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Vimukthi Gunasekara</title>
     <link rel="icon" type="image/icon" href="assets/images/icon.png" />
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
-        type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
     <!-- CSS-->
     <link href="./assets/css/styles.css" rel="stylesheet" />
+
     <!-- JS-->
     <script src="./assets/js/app.js" defer></script>
 </head>
@@ -50,10 +56,26 @@
                     Vimukthi
                     <span class="text-color">Gunasekara</span>
                 </h1>
-                <div class="subheading mb-5 ">
+                <div class="subheading mb-3">
                     Dundas Street, London, ON, Canada · (905) 324-8724 ·
                     <a class="text-color" href="mailto:vimukthisadaruwan65@gmail.com">vimukthisadaruwan65@gmail.com</a>
                 </div>
+                <div class="container mb-3">
+                    <div class="row">
+                        <div class="col-sm border rounded m-2 p-3 text-align-center">
+                            <img src="./assets/images/verified.png" alt="verified-icon" class="icon">
+                            <h4>Experiance</h4>
+                            <p>3+ years <br /> Software Developer </p>
+                        </div>
+                        <div class="col-sm border rounded m-2 p-3">
+                            <img src="./assets/images/verified.png" alt="verified-icon" class="icon">
+                            <h4>Education</h4>
+                            <p>BSc in Information technology in University of Rajarata <br /> Certificate in full-stack
+                                Development in University of Toronto </p>
+                        </div>
+                    </div>
+                </div>
+
                 <p class="lead mb-5">Passionate and solutions-driven web developer with a<b> certificate in full-stack
                         development </b>from <b> the University of Toronto </b> and a<b> BSc in information and
                         technology </b> from <b> the Rajarata University of Sri Lanka.</b> Develop skills in JavaScript,
@@ -433,7 +455,7 @@
                                                 <p class="tools">jest-tests</p>
                                                 <p class="tools">TDD</p>
                                             </div>
-                                            
+
                                         </ul>
                                         <br>
                                         <a class="tags"
@@ -571,7 +593,7 @@
                                             <li>
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
-                                            </li>                                            
+                                            </li>
                                             <div>
                                                 <p class="tools">HTML-CSS-JavaScript</p>
                                                 <p class="tools">PHP</p>
@@ -620,7 +642,7 @@
                                             <li>
                                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                                 Role: Sole author.
-                                            </li>                                            
+                                            </li>
                                             <div>
                                                 <p class="tools">HTML-CSS-JavaScript</p>
                                                 <p class="tools">PHP</p>
