update skills section

--- a/index.html
+++ b/index.html
@@ -98,23 +98,24 @@
 
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">Skills</h2>
+                <h2 class="mb-3">Skills</h2>                
+
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"> <i class="devicon-html5-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-css3-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-javascript-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-jquery-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-bootstrap-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-foundation-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-nodejs-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-express-original"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-react-original"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-mysql-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-mongodb-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-oracle-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-wordpress-plain"></i> </li>
-                    <li class="list-inline-item"> <i class="devicon-figma-plain"></i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-html5-plain h1">HTML5</i> </li>                    
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-css3-plain h1">CSS3</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-javascript-plain h1">Javascript</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-jquery-plain h1">Jquery</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-bootstrap-plain h1">Bootstrap</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-foundation-plain h1">Foundation</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-react-original h1">React.js</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-nodejs-plain h1">Node.js</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-express-original h1">Express</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-mysql-plain h1">Mysql</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-mongodb-plain h1">Mongodb</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-oracle-plain h1">Oracle</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-wordpress-plain h1">Wordpress</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-figma-plain h1">Figma</i> </li>
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
