update project section

--- a/index.html
+++ b/index.html
@@ -98,24 +98,38 @@
 
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-3">Skills</h2>                
+                <h2 class="mb-3">Skills</h2>
 
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-html5-plain h1">HTML5</i> </li>                    
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-css3-plain h1">CSS3</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-javascript-plain h1">Javascript</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-jquery-plain h1">Jquery</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-bootstrap-plain h1">Bootstrap</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-foundation-plain h1">Foundation</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-react-original h1">React.js</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-nodejs-plain h1">Node.js</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-express-original h1">Express</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-mysql-plain h1">Mysql</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-mongodb-plain h1">Mongodb</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-oracle-plain h1">Oracle</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-wordpress-plain h1">Wordpress</i> </li>
-                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-figma-plain h1">Figma</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-html5-plain h1">HTML5</i>
+                    </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-css3-plain h1">CSS3</i>
+                    </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-javascript-plain h1">Javascript</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-jquery-plain h1">Jquery</i>
+                    </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-bootstrap-plain h1">Bootstrap</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-foundation-plain h1">Foundation</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-react-original h1">React.js</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-nodejs-plain h1">Node.js</i>
+                    </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-express-original h1">Express</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-mysql-plain h1">Mysql</i>
+                    </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-mongodb-plain h1">Mongodb</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-oracle-plain h1">Oracle</i>
+                    </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i
+                            class="devicon-wordpress-plain h1">Wordpress</i> </li>
+                    <li class="list-inline-item border rounded p-2 mb-2"> <i class="devicon-figma-plain h1">Figma</i>
+                    </li>
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
@@ -159,12 +173,14 @@
                     </div>
 
                     <div class="row px-2 mt-4 gap-3" id="filterable-cards">
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#pg1Modal" data-name="Front-End">
+                        <div class="card p-0 border" data-name="Front-End">
                             <img src="./assets/images/kanban-board.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Kanban-Board React App</h4>
                                 <p class="card-text">that can be used to implement kanban to manage work at a
                                     personal or organizational level.</p>
+                                <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#pg1Modal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="pg1Modal" tabindex="-1" role="dialog"
@@ -213,12 +229,14 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#btModal" data-name="Front-End">
+                        <div class="card p-0 border" data-name="Front-End">
                             <img src="./assets/images/budget-tracker.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Budget Tracker Web App</h4>
                                 <p class="card-text">An application that tracks income and expenses with different
                                     currencies.</p>
+                                <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#btModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="btModal" tabindex="-1" role="dialog"
@@ -265,12 +283,14 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#pgModal" data-name="Back-End">
+                        <div class="card p-0 border" data-name="Back-End">
                             <img src="./assets/images/get.gif" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">E-Commerce Back End</h4>
                                 <p class="card-text">back-end for an e-commerce site using an Express.js API and a
                                     Sequelize database.</p>
+                                    <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#pgModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="pgModal" tabindex="-1" role="dialog"
@@ -314,11 +334,13 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#wdsModal" data-name="Front-End">
+                        <div class="card p-0 border" data-name="Front-End">
                             <img src="./assets/images/work-day-scheduler.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Work Day Scheduler 📅 Generator</h4>
                                 <p class="card-text">A simple calendar app for scheduling your work day.</p>
+                                <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#wdsModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="wdsModal" tabindex="-1" role="dialog"
@@ -364,14 +386,15 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#prgModal"
-                            data-name="Inquirer-Module">
+                        <div class="card p-0 border" data-name="Inquirer-Module">
                             <img src="./assets/images/professional-readme-generator.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Professional Readme File
                                     Generator</h4>
                                 <p class="card-text">GitHub README Generator Application and displays it on a newly
                                     created README.md file.</p>
+                                    <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#prgModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="prgModal" tabindex="-1" role="dialog"
@@ -415,13 +438,14 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#tpgModal"
-                            data-name="Inquirer-Module">
+                        <div class="card p-0 border" data-name="Inquirer-Module">
                             <img src="./assets/images/team-profile-generator.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Team Profile Generator</h4>
                                 <p class="card-text">This app generates a team profile and displays it on a newly
                                     created HTML page.</p>
+                                    <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#tpgModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="tpgModal" tabindex="-1" role="dialog"
@@ -467,13 +491,15 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#wdModal" data-name="Front-End">
+ 
+                        <div class="card p-0 border" data-name="Front-End">
                             <img src="./assets/images/weather-dashboard.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Weather Dashboard 🌦️</h4>
                                 <p class="card-text">A weather dashboard application that displays current weather and a
                                     5-day forecast for a city.</p>
+                                    <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#wdModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="wdModal" tabindex="-1" role="dialog"
@@ -517,13 +543,15 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#skrModal" data-name="WordPress">
+                        <div class="card p-0 border" data-name="WordPress">
                             <img src="./assets/images/sk-realtors-2.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">SK-Realtors Agent Website in
                                     Toronto</h4>
                                 <p class="card-text"> Design, developed and implemented SK-Realtors Agent Website in
                                     Toronto.</p>
+                                    <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#skrModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="skrModal" tabindex="-1" role="dialog"
@@ -567,11 +595,13 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#vpacModal" data-name="WordPress">
+                        <div class="card p-0 border" data-name="WordPress">
                             <img src="./assets/images/vpac.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">VPAC Official Business Website</h4>
                                 <p class="card-text">Design, developed and implemented vpac Official web site.</p>
+                                <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#vpacModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="vpacModal" tabindex="-1" role="dialog"
@@ -612,13 +642,15 @@
                             </div>
                         </div>
 
-                        <div class="card p-0" data-bs-toggle="modal" data-bs-target="#fmModal" data-name="WordPress">
+                        <div class="card p-0 border" data-name="WordPress">
                             <img src="./assets/images/flymeinternational.png" alt="img">
                             <div class="card-body">
                                 <h4 class="card-title">Flyme International Education
                                     Consultants</h4>
                                 <p class="card-text"> Design, developed and implemented Flyme International Official
                                     web site.</p>
+                                    <button class="btn mb-2 me-1 border" data-bs-toggle="modal"
+                                    data-bs-target="#fmModal">More</button>
                             </div>
                         </div>
                         <div class="modal fade" id="fmModal" tabindex="-1" role="dialog"
