update about section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <div class="container-fluid p-0">
         <section class="resume-section" id="about">
             <div class="resume-section-content">
-                <h1 class="mb-0">
+                <img src="./assets/images/Vimukthi_Gunasekara.jpg" alt="main-img" class="main-img rounded-circle">
+                <h1 class="name mb-0">
                     Vimukthi
                     <span class="text-color">Gunasekara</span>
                 </h1>
