Update Mobile View

--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
     <div class="bg-pattern">
         <div class="container pt-5 pb-5">
             <div class="row p-5 ">
-                <div class="col-sm-7 themed-grid-col">
+                <div class="col-sm-5 themed-grid-col img-hero order-md-2">
+                    <img src="./assets/images/hero.png" alt="Vimukthi Gunasekara">
+                    <div class="rotate-text">
+                        <div class="text">
+                            <p>Web Developer, Front End Developer and UI/UX Designer</p>
+                        </div>
+                        <span><i></i></span>
+                    </div>
+                </div>
+                <div class="col-sm-7 themed-grid-col order-md-1 text-hero">
                     <h3>Hi 👋</h3>
                     <h1 class="name-hero"><span class="name-grad-span">Vimukthi</span> Gunasekara</h1>
 
@@ -94,16 +103,7 @@
                         <a class="btn btn-lg btn-outline-secondary rounded-circle m-2 sm-icon"
                             href="https://www.uplabs.com/vimuguna" role="button"><i class="fab fa-dribbble"></i></a>
                     </div>
-                </div>
-                <div class="col-sm-5 themed-grid-col img-hero">
-                    <img src="./assets/images/hero.png" alt="Vimukthi Gunasekara">
-                    <div class="rotate-text">
-                        <div class="text">
-                            <p>Web Developer, Front End Developer and UI/UX Designer</p>
-                        </div>
-                        <span><i></i></span>
-                    </div>
-                </div>
+                </div>                
             </div>
         </div>
     </div>
@@ -127,7 +127,7 @@
             </h1>
             <div class="row">
                 <div class="row mt-5 mb-2" id="filter-buttons">
-                    <div class="col-12">
+                    <div class="col-12 text-center">
                         <button class="btn mb-2 me-1 btn-outline-secondary active" onclick="clearAll()">Show
                             All</button>
                         <button class="btn mb-2 mx-1 btn-outline-secondary"
@@ -471,5 +471,4 @@
     <!-- JS-->
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
