Update Hero Section

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
                         development from the
                         University of Toronto and a BSc in IT from the Rajarata University of Sri Lanka.</p>
 
-                    <div class="col pt-4">
+                    <div class="col pt-3">
                         <div class="col-sm-12">
-                            <h4>05+ years Experiance</h4>
+                            <h1>05+</h1>
+                            <h4>years Experiance</h4>
                         </div>
                         </br>
                         <div class="col-sm-12">
